<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp"
    android:background="@color/darkgrey">

    <LinearLayout
        android:id="@+id/llBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:background="@color/middlegray">

        <ImageView
            android:id="@+id/ivItemImg"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/itempic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/itemName"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvItemAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/itemAmount"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>