<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="2dp"
    android:background="@color/darkgrey"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:background="@color/middlegray">

        <ImageView
            android:id="@+id/ivPlayerImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/playerpic" />

        <TextView
            android:id="@+id/playerItemNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="20sp"
            android:text="@string/playerName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/ibRemove"
            android:layout_width="25dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/ic_action_delete"
            android:backgroundTint="@color/middlegray"
            android:contentDescription="@string/deletebutton" />

    </LinearLayout>
</LinearLayout>