<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llBg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:id="@+id/ivItemImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/itempic" />

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/llStickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivSticker1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/sticker"/>

                    <TextView
                        android:id="@+id/tvSticker1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivSticker2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/sticker"/>

                    <TextView
                        android:id="@+id/tvSticker2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivSticker3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/sticker"/>

                    <TextView
                        android:id="@+id/tvSticker3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivSticker4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/sticker"/>

                    <TextView
                        android:id="@+id/tvSticker4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/darkgrey"
                android:padding="10dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/market"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvLP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/lowest_price"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemLP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/median_price"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemMP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/number_of_units_on_market"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvitem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/item"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tvFloat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/floatValue"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemFloat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvPaintSeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/paint_seed"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemPaintSeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvOrigin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/origin"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemOrigin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tvFloatRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/float_range"
                    android:background="@color/lightgray"
                    android:padding="2dp"/>
                <TextView
                    android:id="@+id/tvItemFloatRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>