<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/llBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <ImageView
                    android:id="@+id/ivPlayerImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/profilepic" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:paddingLeft="5dp"/>

            <TextView
                android:id="@+id/tvPlayerProfileLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:linksClickable="true"
                android:autoLink="web"
                android:paddingStart="60dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/levelColor"/>

        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:id="@+id/llBorder"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="35dp"-->
<!--            android:padding="5dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/ivPlayerImg"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:contentDescription="@string/profilepic" />-->

<!--        </LinearLayout>-->



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/darkgrey">
            <TextView
                android:id="@+id/tvID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/tvPlayerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tvProfileLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textSize="20sp"
            android:background="@color/middlegray"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tvPlayerProfileLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:linksClickable="true"
            android:autoLink="web"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"/>

<!--        <TextView-->
<!--            android:id="@+id/tvProfileLevel"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/level"-->
<!--            android:textSize="20sp"-->
<!--            android:background="@color/middlegray"-->
<!--            android:padding="5dp"/>-->
<!--        <TextView-->
<!--            android:id="@+id/tvPlayerProfileLevel"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="20sp"-->
<!--            android:linksClickable="true"-->
<!--            android:autoLink="web"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:layout_marginStart="5dp"/>-->

        <TextView
            android:id="@+id/tvCommProfileState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visibility_state"
            android:textSize="20sp"
            android:background="@color/middlegray"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/tvPlayerCommProfileState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_state"
            android:textSize="20sp"
            android:background="@color/middlegray"
            android:padding="5dp"/>


        <TextView
            android:id="@+id/tvPlayerState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRecently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/recently_played_games"
            android:layout_marginBottom="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_game"
            android:background="@color/darkgrey"
            android:layout_marginBottom="15dp"/>



    </LinearLayout>
</ScrollView>